Change class name (launchPage)

--- a/Pages/episode01.html
+++ b/Pages/episode01.html
@@ -11,33 +11,33 @@
     <link rel="stylesheet" href="styles/episode01.css">
 </head>
 
-<body>
+<body class="body_background--image">
 
-    <header class="header_menuPage">
+    <header class="header_pageOne">
 
-        <span class="material-symbols-outlined">
+        <span class="pageOne_content--icon material-symbols-outlined">
             play_arrow
         </span>
 
-        <h1>Importância da</h1>
+        <h1 class="pageOne_content--title">Importância da</h1>
 
-        <h2>organização no trabalho</h2>
+        <h2 class="pageOne_content--subtitle">organização no trabalho</h2>
 
     </header>
 
-    <main>
+    <main class="main_pageOne">
 
-        <section>
+        <section class="pageOne_container--introductionTexts">
 
-            <h4>Deixa eu te fazer uma pergunta...</h4>
+            <h4 class="content_introductionTexts--lowerTitle">Deixa eu te fazer uma pergunta...</h4>
 
-            <hr>
+            <hr class="content_introductionTexts--">
 
-            <h2>Você se considera uma pessoa organizada no trabalho?</h2>
+            <h2 class="content_introductionTexts--">Você se considera uma pessoa organizada no trabalho?</h2>
 
         </section>
 
-        <section>
+        <section class="pageOne_container">
 
             <h4>O conceito de organização existe há muito tempo:</h4>
 
