Finish class name in episode one

--- a/Pages/episode01.html
+++ b/Pages/episode01.html
@@ -31,26 +31,26 @@
 
             <h4 class="content_introductionTexts--lowerTitle">Deixa eu te fazer uma pergunta...</h4>
 
-            <hr class="content_introductionTexts--">
+            <hr class="content_introductionTexts--separationBar">
 
-            <h2 class="content_introductionTexts--">Você se considera uma pessoa organizada no trabalho?</h2>
+            <h2 class="content_introductionTexts--upperTitle">Você se considera uma pessoa organizada no trabalho?</h2>
 
         </section>
 
-        <section class="pageOne_container">
+        <section class="pageOne_container--hoverCards">
 
-            <h4>O conceito de organização existe há muito tempo:</h4>
+            <h4 class="content_hoverCards--lowerTitle">O conceito de organização existe há muito tempo:</h4>
 
-            <div>
+            <div class="container_hoverCards">
 
-                <div>
-                    <p>Antigamente, as pessoas se organizavam para encontrar comida, água e abrigo. A organização em si
+                <div class="content_hoverCards--background">
+                    <p class="content_hoverCards--text">Antigamente, as pessoas se organizavam para encontrar comida, água e abrigo. A organização em si
                         não diz respeito apenas ao espaço físico, mas também ao espaço mental no qual funcionamos
                         melhor.</p>
                 </div>
 
-                <div>
-                    <p>A importância da organização no trabalho tem aumentado com a crescente quantidade de tarefas e
+                <div class="content_hoverCards--background">
+                    <p class="content_hoverCards--text">A importância da organização no trabalho tem aumentado com a crescente quantidade de tarefas e
                         responsabilidades que são atribuídas aos colaboradores a um ritmo cada vez maior.</p>
                 </div>
 
@@ -58,10 +58,21 @@
 
         </section>
 
+        <section class="container_video--iframe">
+
+            <iframe src="https://player.vimeo.com/video/719931050?h=693430b331" width="100%" height="100%" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+
+        </section>
+
     </main>
-    <footer>
+
+    <footer class="footer_pageOne">
+
+        <p class="pageOne_content--paragraph">No próximo episódio, vou te mostrar algumas dicas de como iniciar sua organização no ambiente corporativo.
+            Vamos lá?</p>
 
     </footer>
+    
 </body>
 
 </html>
