--- a/Pages/episode03.html
+++ b/Pages/episode03.html
@@ -12,9 +12,9 @@
 </head>
 
 <body>
-    <header class="header_pageTree">
+    <header class="header_pageTree padding_header">
 
-        <span class="pageTree_content--icon material-symbols-outlined">
+        <span class="pageTree_content--icon material-symbols-outlined " onclick="playVideo()">
             play_arrow
         </span>
 
@@ -22,7 +22,12 @@
 
         <h2 class="pageTree_content--subtitle">devem se preocupar com</h2>
 
-        <h2 class="pageTree_content--title">funcionários organizados?</h2>
+        <h2 class="pageTree_content--title titleTwo">funcionários organizados?</h2>
+
+        <div class="pageTree_background--iframe hidden">
+            <video id="video" src="assets/episode03/Episodio03_capa.mp4" controls autoplay width="100%" height="100%"></video>
+
+        </div>
 
     </header>
     <main class="main_pageTree">
@@ -62,6 +67,7 @@
         </footer>
 
     </main>
+    <script src="scripts/episode03.js"></script>
 </body>
 
 </html>
