Fixing video bugs

--- a/Pages/episode02.html
+++ b/Pages/episode02.html
@@ -33,7 +33,7 @@
         <h2 class="pageTwo_content--subtitle">organização</h2>
 
         <div class="pageTwo_background--iframe hidden">
-            <video id="video" src="assets/episode02/gif_episode_two.mp4" controls autoplay width="100%"
+            <video id="video" src="assets/episode02/gif_episode_two.mp4" autoplay width="100%"
                 height="100%"></video>
 
         </div>
