--- a/Pages/episode03.html
+++ b/Pages/episode03.html
@@ -14,7 +14,7 @@
 <body>
     <header class="header_pageTree padding_header">
 
-        <span class="pageTree_content--icon material-symbols-outlined " onclick="playVideo()">
+        <span class="pageTree_content--icon material-symbols-outlined " onclick="playVideo()">  
             play_arrow
         </span>
 
@@ -25,7 +25,7 @@
         <h2 class="pageTree_content--title titleTwo">funcionários organizados?</h2>
 
         <div class="pageTree_background--iframe hidden">
-            <video id="video" src="assets/episode03/Episodio03_capa.mp4" controls autoplay width="100%" height="100%"></video>
+            <video id="video" src="assets/episode03/Episodio03_capa.mp4"  autoplay width="100%" height="100%"></video>
 
         </div>
 
